--- a/README.adoc
+++ b/README.adoc
@@ -39,6 +39,8 @@ $ suma
 Commands:
   suma build METANORMA_SITE_MANIFEST  # Build collection specified in site manifest (`metanorma*.yml`)
   suma links SUBCOMMAND ...ARGS       # Manage EXPRESS links
+  suma validate-ascii EXPRESS_FILE_PATH  # Validate EXPRESS files for ASCII-only content
+  suma reformat EXPRESS_FILE_PATH     # Reformat EXPRESS files
   suma help [COMMAND]                 # Describe available commands or one specific command
 ----
 
@@ -164,6 +166,123 @@ This command:
 
 * Loads the EXPRESS files specified in the `EXPRESS_FILE_PATH`
 * Reformats and saves the loaded EXPRESS files
+
+
+=== Validate-ASCII command
+
+==== General
+
+The `validate-ascii` command detects non-ASCII characters in EXPRESS files and reports on those exact lines, providing replacement suggestions.
+
+[source,sh]
+----
+$ suma validate-ascii EXPRESS_FILE_PATH [options]
+----
+
+Parameters:
+
+`EXPRESS_FILE_PATH`:: Path to an EXPRESS file or a folder containing EXPRESS
+files
+
+Options:
+
+`--[no-]recursive`, `-r`:: Select EXPRESS files recursively based on the specified
+folder path (default: false)
+`--[no-]yaml`, `-y`:: Output results in YAML format for machine processing (default: false)
+
+[example]
+====
+.To validate all EXPRESS files in a specific directory recursively
+[source,sh]
+----
+$ bundle exec suma validate-ascii ../iso-10303/schemas -r
+----
+
+.To validate and output results in YAML format
+[source,sh]
+----
+$ bundle exec suma validate-ascii ../iso-10303/schemas -r -y > validation.yml
+----
+====
+
+This command:
+
+* Loads the EXPRESS files specified in the `EXPRESS_FILE_PATH`
+* Scans each line for non-ASCII characters
+* Reports detailed information about each violation, including:
+** Filename and line number
+** The exact line content
+** Visual indication of the non-ASCII sequence location
+** Character details with hexadecimal representation
+* Provides specific replacement suggestions:
+** For math symbols: provides equivalent AsciiMath notation
+** For other non-ASCII characters: provides ISO 10303-11 encoded string literal format
+* Displays a summary table showing:
+** File path (directory/filename)
+** Each non-ASCII symbol found
+** Suggested replacement for each symbol
+** Number of occurrences of each character
+** Totals row showing unique character count and overall occurrences
+* Summarizes findings across all scanned files
+* Optionally outputs structured data in YAML format with detailed occurrence information
+
+Human-readable output format example:
+
+[source,text]
+----
+/path/to/file.exp:
+  Line 42, Column 15:
+    ENTITY some_entity (name: STRING, description: "résumé");
+                                       ^^^^^
+      "é" - Hex: 0xe9, UTF-8 bytes: 0xc3 0xa9
+      Replacement: ISO 10303-11: "000000E9"
+      
+      "s" - Hex: 0x73, UTF-8 bytes: 0x73
+      
+      "u" - Hex: 0x75, UTF-8 bytes: 0x75
+      
+      "m" - Hex: 0x6d, UTF-8 bytes: 0x6d
+      
+      "é" - Hex: 0xe9, UTF-8 bytes: 0xc3 0xa9
+      Replacement: ISO 10303-11: "000000E9"
+
+  Found 1 non-ASCII sequence(s) in file.exp
+
+Summary:
+  Scanned 3 EXPRESS file(s)
+  Found 1 non-ASCII sequence(s) in 1 file(s)
+  
++------------------+--------------------+-----------------------------+-------------+
+|       File       |       Symbol       |        Replacement          | Occurrences |
++------------------+--------------------+-----------------------------+-------------+
+| path/to/file.exp | "é" (0xe9)         | ISO 10303-11: "000000E9"    | 2           |
++------------------+--------------------+-----------------------------+-------------+
+| TOTAL            | 1 unique           |                             | 2           |
++------------------+--------------------+-----------------------------+-------------+
+----
+
+===== Japanese Character Example
+
+For Japanese characters like 神戸 (Kobe), the command will provide ISO 10303-11 encoded string literal replacements:
+
+[source,text]
+----
+"神" - Hex: 0x795e, UTF-8 bytes: 0xe7 0xa5 0x9e
+Replacement: ISO 10303-11: "0000795E"
+
+"戸" - Hex: 0x6238, UTF-8 bytes: 0xe6 0x88 0xb8
+Replacement: ISO 10303-11: "00006238"
+----
+
+===== Math Symbol Example
+
+For mathematical symbols, the command will provide equivalent AsciiMath notation:
+
+[source,text]
+----
+"×" - Hex: 0xd7, UTF-8 bytes: 0xc3 0x97
+Replacement: AsciiMath: xx
+----
 
 
 == Usage: Ruby
