--- a/README.adoc
+++ b/README.adoc
@@ -40,7 +40,8 @@ Commands:
   suma build METANORMA_SITE_MANIFEST        # Build collection specified in site manifest (`metanorma*.yml`)
   suma reformat EXPRESS_FILE_PATH           # Reformat EXPRESS files
   suma validate SUBCOMMAND ...ARGS          # Validate express documents
-  suma generate_schemas METANORMA_YAML_FILE # Generate Schemas YAML file from Metanorma YAML file
+  suma generate_schemas METANORMA_YAML_FILE SCHEMA_MANIFEST_FILE # Generate Schemas YAML file from Metanorma YAML file
+  suma extract_terms EXPRESS_FILE_PATH GLOSSARIST_OUTPUT_PATH   # Extract terms from EXPRESS files
   suma help [COMMAND]                       # Describe available commands or one specific command
 ----
 
@@ -295,57 +296,70 @@ defined in the Metanorma YAML file.
 
 [source,sh]
 ----
-$ suma generate_schemas METANORMA_YAML_FILE [options]
+$ suma generate_schemas METANORMA_YAML_FILE SCHEMA_MANIFEST_FILE [options]
 ----
 
 Parameters:
+
 `METANORMA_YAML_FILE`:: Path to the Metanorma YAML file
 (e.g.: "metanorma-smrl-all.yml")
 
 Options:
 
-`--output=OUTPUT_FILE`, `-o OUTPUT_FILE`:: Path to write the generated
-Schemas YAML file
-If this option is specified but the OUTPUT_FILE is not, it will use the default
-name (`schemas-smrl-all.yml`).
-If this option is not specified, it will run in dry-run mode and print the
-output to STDOUT.
-
 `--exclude_path`, `-e`:: Exclude schemas by pattern (e.g. `*_lf.exp`)
-
 
 [example]
 ====
 .To generate schemas YAML file from Metanorma YAML file
 [source,sh]
 ----
-$ bundle exec suma generate_schemas metanorma-smrl-all.yml -o
+$ bundle exec suma generate_schemas metanorma-smrl-all.yml schemas-smrl-all.yml
 # => generates schemas-smrl-all.yml
-----
-
-.To inspect the generated schemas YAML file
-[source,sh]
-----
-$ bundle exec suma generate_schemas metanorma-smrl-all.yml
-# => prints the output to STDOUT
 ----
 
 .To generate schemas YAML file from Metanorma YAML file and exclude schemas with names like `*_lf.exp`
 [source,sh]
 ----
-$ bundle exec suma generate_schemas metanorma-smrl-all.yml -o -e *_lf.exp
+$ bundle exec suma generate_schemas metanorma-smrl-all.yml schemas-smrl-all.yml -e *_lf.exp
 # => generates schemas-smrl-all.yml without schemas with names like *_lf.exp
 ----
-
-.To inspect the generated schemas YAML file with excluded schemas
-[source,sh]
-----
-$ bundle exec suma generate_schemas metanorma-smrl-all.yml -e *_lf.exp
-# => prints the output to STDOUT
-----
+====
 
 All documents need to have a `schemas.yaml` in their document root that lists
 out which schemas the document includes.
+
+
+=== Extract terms command
+
+The `suma extract_terms` command extracts terms from EXPRESS files and generates
+Glossarist v2 dataset in the output directory.
+
+[source,sh]
+----
+$ suma extract_terms EXPRESS_FILE_PATH GLOSSARIST_OUTPUT_PATH [options]
+----
+
+Parameters:
+
+`EXPRESS_FILE_PATH`:: Path to an EXPRESS file or a folder containing EXPRESS
+files
+
+`GLOSSARIST_OUTPUT_PATH`:: Path to the output directory for the Glossarist v2 dataset
+
+Options:
+
+`--[no-]recursive`, `-r`:: Select EXPRESS files recursively based on the specified
+folder path (default: false)
+
+[example]
+====
+.To extract terms from an EXPRESS file
+[source,sh]
+----
+$ bundle exec suma extract_terms path/to/arm.exp glossarist_output
+# => generates glossarist_output/concept/foo.yaml and glossarist_output/localized_concept/bar.yaml
+----
+====
 
 
 == Usage: Ruby
